    * Also `dgm::Window` is now marked as `final`
 * Added examples target
    * Build by default, you can use `-D ENABLE_EXAMPLES=OFF` to surpress on configure
    * Examples showcase various features of the library and how to use them
 * Added `dgm::Clip::getFrameUnchecked` for faster, unchecked access
 * Added `dgm::DynamicBuffer::isEmpty`
 * Added integration test for integrating precompiled binaries with CMake
 * Fixed an off-by-one error produced from `dgm::Animation::set/getSpeed`
 * Fixed bug in `dgm::Camera` where `setPosition` did nothing while the camera was shaking
 * Deprecated default constructors for Clip, Window, Path and TileMap
 * `dgm::Animation::getSpeed` was marked as noexcept

dgm-lib v2.3.1
 * Fixed `WorldNavMesh` internal lookup algorithm, which could produce paths that go through solid walls
 * Fixed `WorldNavMesh` internal lookup algorithm, which could not find path in an empty room
 * Fixed `dgm::App::pushState` stopped working properly after pushed state throwed an exception in constructor

dgm-lib v2.3.0
 * Bumped to SFML v2.6.1
 * Added load helpers to `dgm::Utility` that can be used as load callbacks for `dgm::ResourceManager`
 * Removed `dgm::AbstractController`
 * Removed all deprecated methods
 * Added `getRawData` and `getRawConstData` to `dgm::GenericMesh`
 * Reworked `dgm::App` and `dgm::AppState`
	* There is no longer a restriction about not calling pushState from constructor of AppState derivates. It works now!
	* `isTransparent` and `getClearColor` are no longer virtual methods, they are replaced by `dgm::AppStateConfig`
		* `isTransparent` was broken down into `shouldUpdateUnderlyingState` and `shouldDrawUnderlyingState` - first allows you to specify whether input and update methods should be executed for the state under top state. The second does the same for draw method. If multiple states are transparent in this way, the effect is applied recursively